# forthy2

./: .gitignore  CMakeLists.txt  README.md  moment-of-truth.md  sayonara.md  scratch  todo.org
.github/: FUNDING.yml
bench/: bench.py  fib_iter.f2  fib_iter.py  fib_rec.f2  fib_rec.py  fib_tail.f2  fib_tail.py  fix.f2  fix.py  iter.f2  iter.py  stack.f2  stack.py  transform.f2
src/: main.cpp
src/forthy2/: arg.cpp  arg.hpp  bool.cpp  bool.hpp  call.hpp  cmp.hpp  cx.hpp  defer.hpp  e.hpp  env.cpp  env.hpp  filter.cpp  filter.hpp  fix.cpp  fix.hpp  fn.cpp  fn.hpp  form.cpp  form.hpp  forthy2.hpp  imp.hpp  int.cpp  int.hpp  iter.cpp  iter.hpp  lambda.cpp  lambda.hpp  macro.cpp  macro.hpp  map.cpp  map.hpp  method.cpp  method.hpp  method_set.cpp  method_set.hpp  nil.cpp  nil.hpp  node.hpp  op.cpp  op.hpp  (+30 more)
src/forthy2/forms/: dot.cpp  dot.hpp  id.cpp  id.hpp  lit.cpp  lit.hpp  nil.cpp  nil.hpp  pair.cpp  pair.hpp  quote.cpp  quote.hpp  ref.cpp  ref.hpp  scope.cpp  scope.hpp  splice.cpp  splice.hpp  stack.cpp  stack.hpp  unquote.cpp  unquote.hpp
src/forthy2/iters/: filter.cpp  filter.hpp  int.cpp  int.hpp  map.cpp  map.hpp  nil.hpp  pair.cpp  pair.hpp  stack.cpp  stack.hpp  val.cpp  val.hpp  zip.cpp  zip.hpp
src/forthy2/libs/: abc.cpp  abc.hpp  io.cpp  io.hpp  iter.cpp  iter.hpp  math.cpp  math.hpp  meta.cpp  meta.hpp  time.cpp  time.hpp
src/forthy2/ops/: bind.cpp  bind.hpp  branch.cpp  branch.hpp  call.cpp  call.hpp  check.cpp  check.hpp  clock.cpp  clock.hpp  copy.cpp  copy.hpp  drop.cpp  drop.hpp  for.cpp  for.hpp  if.cpp  if.hpp  lambda.cpp  (+27 more)
test/: run.f2
(+18 files in other folders)
